<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/lyt_header_background"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/small_dimen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_dimen">

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textColor="@color/selector_text_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCostValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_dimen"
            android:textColor="@color/selector_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/tvCost"
            app:layout_constraintStart_toEndOf="@+id/tvCost"
            app:layout_constraintTop_toTopOf="@+id/tvCost"
            tools:text="00.00" />

        <TextView
            android:id="@+id/tvSale"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/half_default_margin"
            android:text="@string/sale"
            android:textColor="@color/selector_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvGain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCost" />

        <TextView
            android:id="@+id/tvSaleValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_dimen"
            android:textColor="@color/selector_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/tvSale"
            app:layout_constraintStart_toEndOf="@+id/tvSale"
            app:layout_constraintTop_toTopOf="@+id/tvSale"
            tools:text="00.00" />

        <TextView
            android:id="@+id/tvGain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_default_margin"
            android:text="@string/gain"
            android:textColor="@color/selector_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/svProduct"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvGainValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_dimen"
            android:textColor="@color/selector_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/tvGain"
            app:layout_constraintStart_toEndOf="@+id/tvGain"
            app:layout_constraintTop_toTopOf="@+id/tvGain"
            tools:text="00.00" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/scActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/select_all"
            app:layout_constraintBottom_toBottomOf="@+id/tvGain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvCost" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:queryHint="@string/search_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>